# essentia-algorithm-in-rust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
src/: chroma_cross_similarity_utils.rs  essentia_math.rs  lib.rs
test/: essentia_test.py  py03_dev.py  test_chromacrosssimilarity.py
test/acceptance/: dev.py  essentia_test.py  test_chromacrosssimilarity.py
test/unit/: test_bindings.py
